[package]
name = "bbl-usd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bbl_usd"
path = "src/lib.rs"

[dependencies]
glam = {version = "0.25", features = ["scalar-math"]}

[build-dependencies]
bbl-build = {git = "https://github.com/anderslanglands/bbl-build-rs.git", rev="fd2a2d1"}
